--- a/environment.yml
+++ b/environment.yml
@@ -1,133 +1,15 @@
-name: MVulD
+name: MVulD-CPU 
 channels:
+  - conda-forge 
+  - defaults
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free
-  - conda-forge
-  - defaults
 dependencies:
-  - accimage=0.2.0=py38hed9865a_3
-  - asttokens=2.0.5=pyhd8ed1ab_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - ca-certificates=2022.5.18.1=ha878542_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - executing=0.8.3=pyhd8ed1ab_0
-  - intel-ipp=2019.1.144=h711154d_3
-  - ipykernel=6.13.0=py38h7f3c49e_0
-  - ipython=8.3.0=py38h578d9bd_0
-  - jedi=0.18.1=py38h578d9bd_1
-  - jupyter_client=7.0.6=pyhd8ed1ab_0
-  - jupyter_core=4.9.2=py38h578d9bd_0
-  - libjpeg-turbo=2.1.1=h7f98852_0
-  - libsodium=1.0.18=h36c2ea0_1
-  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
-  - nest-asyncio=1.5.5=pyhd8ed1ab_0
-  - packaging=21.3=pyhd8ed1ab_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pexpect=4.8.0=pyh9f0ad1d_2
-  - pickleshare=0.7.5=py_1003
-  - prompt-toolkit=3.0.29=pyha770c72_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pygments=2.12.0=pyhd8ed1ab_0
-  - pyparsing=3.0.8=pyhd8ed1ab_0
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.8=2_cp38
-  - pyzmq=19.0.2=py38ha71036d_2
-  - stack_data=0.2.0=pyhd8ed1ab_0
-  - tornado=6.1=py38h497a2fe_1
-  - traitlets=5.1.1=pyhd8ed1ab_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - zeromq=4.3.4=h9c3ff4c_0
-  - _libgcc_mutex=0.1=main.conda
-  - _openmp_mutex=4.5=1_gnu
-  - brotlipy=0.7.0=py38h27cfd23_1003.conda
-  - bzip2=1.0.8=h7b6447c_0.conda
-  - cairo=1.14.12=h8948797_3.conda
-  - certifi=2021.10.8=py38h06a4308_2.conda
-  - cffi=1.15.0=py38h7f8727e_0.conda
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0.conda
-  - clang=10.0.1=default_hb85057a_2.conda
-  - cryptography=36.0.0=py38h9ce1e76_0.conda
-  - cudatoolkit=10.2.89=hfd86e86_1.conda
-  - debugpy=1.5.1=py38h295c915_0.conda
-  - expat=2.4.4=h295c915_0.conda
-  - fontconfig=2.13.1=h6c09931_0.conda
-  - freetype=2.11.0=h70c0345_0.conda
-  - fribidi=1.0.10=h7b6447c_0.conda
-  - giflib=5.2.1=h7b6447c_0.conda
-  - glib=2.63.1=h5a9c865_0.conda
-  - gmp=6.2.1=h2531618_2.conda
-  - gnutls=3.6.15=he1e5248_0.conda
-  - graphite2=1.3.14=h23475e2_0.conda
-  - graphviz=2.40.1=h21bd128_2.conda
-  - harfbuzz=1.8.8=hffaf4a1_0.conda
-  - icu=58.2=he6710b0_3.conda
-  - idna=3.3=pyhd3eb1b0_0.conda
-  - intel-openmp=2021.4.0=h06a4308_3561.conda
-  - lame=3.100=h7b6447c_0.conda
-  - lcms2=2.12=h3be6417_0.conda
-  - ld_impl_linux-64=2.35.1=h7274673_9.conda
-  - libclang-cpp10=10.0.1=default_hb85057a_2.conda
-  - libgcc-ng=11.2.0=h1234567_0.conda
-  - libgomp=11.2.0=h1234567_0.conda
-  - libidn2=2.3.2=h7f8727e_0.conda
-  - libllvm10=10.0.1=hbcb73fb_5.conda
-  - libpng=1.6.37=hbc83047_0.conda
-  - libstdcxx-ng=9.3.0=hd4cf53a_17.conda
-  - libtasn1=4.16.0=h27cfd23_0.conda
-  - libtiff=4.2.0=h85742a9_0.conda
-  - libunistring=0.9.10=h27cfd23_0.conda
-  - libuv=1.40.0=h7b6447c_0.conda
-  - libwebp=1.2.0=h89dd481_0.conda
-  - libwebp-base=1.2.0=h27cfd23_0.conda
-  - libxcb=1.14=h7b6447c_0.conda
-  - libxml2=2.9.12=h03d6c58_0.conda
-  - lz4-c=1.9.3=h295c915_1.conda
-  - mkl=2021.4.0=h06a4308_640.conda
-  - mkl-service=2.4.0=py38h7f8727e_0.conda
-  - mkl_fft=1.3.1=py38hd3c417c_0.conda
-  - mkl_random=1.2.2=py38h51133e4_0.conda
-  - ncurses=6.3=h7f8727e_2.conda
-  - nettle=3.7.3=hbbd107a_1.conda
-  - numpy=1.21.5=py38he7a7128_2.conda
-  - numpy-base=1.21.5=py38hf524024_2.conda
-  - openh264=2.1.1=h4ff587b_0.conda
-  - openssl=1.1.1n=h7f8727e_0.conda
-  - pango=1.42.4=h049681c_0.conda
-  - pcre=8.45=h295c915_0.conda
-  - pillow=9.0.1=py38h22f2fdc_0.conda
-  - pip=21.2.4=py38h06a4308_0.conda
-  - psutil=5.8.0=py38h27cfd23_1.conda
-  - pycparser=2.21=pyhd3eb1b0_0.conda
-  - pyopenssl=22.0.0=pyhd3eb1b0_0.conda
-  - pysocks=1.7.1=py38h06a4308_0.conda
-  - python=3.8.2=hcf32534_0.conda
-  - readline=8.1.2=h7f8727e_1.conda
-  - requests=2.27.1=pyhd3eb1b0_0.conda
-  - setuptools=61.2.0=py38h06a4308_0.conda
-  - six=1.16.0=pyhd3eb1b0_1.conda
-  - sqlite=3.38.3=hc218d9a_0.conda
-  - tk=8.6.11=h1ccaba5_0.conda
-  - typing_extensions=4.1.1=pyh06a4308_0.conda
-  - urllib3=1.26.9=py38h06a4308_0.conda
-  - wheel=0.37.1=pyhd3eb1b0_0.conda
-  - xz=5.2.5=h7f8727e_1.conda
-  - zlib=1.2.12=h7f8727e_2.conda
-  - zstd=1.4.9=haebb681_0.conda
-  - ffmpeg=4.3=hf484d3e_0
-  - pytorch=1.11.0=py3.8_cuda10.2_cudnn7.6.5_0
-  - pytorch-mutex=1.0=cuda
-  - torchaudio=0.11.0=py38_cu102
-  - torchvision=0.12.0=py38_cu102
-  - blas=1.0=mkl
-  - jpeg=9b=0
-  - libffi=3.2.1=1
-  - libiconv=1.14=0
-  - libuuid=1.0.3=0
-  - pixman=0.34.0=0
+  - python=3.8 
+  - pip
+  - pytorch
+  - torchvision
+  - torchaudio 
   - pip:
     - absl-py==1.0.0
     - aiohttp==3.8.1
@@ -304,4 +186,3 @@ dependencies:
     - yacs==0.1.8
     - yarl==1.7.2
     - zipp==3.8.0
-
