--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ scikit-learn
 scipy
 pandas
 fastparquet
-spacy
+spacy==3.7.6a
 imbalanced-learn
 dgl
 networkx
@@ -25,7 +25,6 @@ tensorboard
 python-igraph
 unidiff
 fuzzywuzzy
-python-Levenshtein
 libclang
 pandarallel
 ipywidgets
